# PhenoRuntime

./: AGENTS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  PRD.md  README.md  SECURITY.md  cargo-semver-checks.yml  go.mod  package.json  pyproject.toml
.agileplus/: agileplus.db
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql.yml  doc-links.yml  fr-coverage.yml  journey-gate.yml  pages.yml  quality-gate.yml  secrets-scan.yml
crates/pheno-minio/: Cargo.toml
crates/pheno-minio/src/: lib.rs
crates/pheno-nats/: Cargo.toml
crates/pheno-nats/src/: lib.rs
crates/phenotype-llm/: Cargo.toml
crates/phenotype-llm/src/: lib.rs
crates/phenotype-mcp-server/: Cargo.toml
crates/phenotype-mcp-server/src/: lib.rs
crates/phenotype-surrealdb/: Cargo.toml
crates/phenotype-surrealdb/src/: lib.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  index.md
docs/docs/phenoruntime/: capacity.md  cli.md  config.md  developers.md  index.md  multicloud.md  scheduling.md  security.md
docs/journeys/manifests/: main-flow.json
docs/operations/: journey-traceability.md
docs/phenoruntime/: capacity.md  cli.md  config.md  developers.md  index.md  multicloud.md  scheduling.md  security.md
docs/research/: SOTA-RUNTIME.md  SOTA-WASM.md  index.md
docs/sessions/20260429-phenoruntime-sladge-badge/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md
docs/worklogs/: README.md  index.md  worklog.md
kitty-specs/phenoruntime-docs-surface/: spec.md
src/: main.rs
