[package]
name = "pheno-minio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
aws-sdk-s3 = "1.112"
aws-config = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
bytes = "1.10"
chrono = "0.4"
