[package]
name = "pheno-nats"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
async-nats = "0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
