[package]
name = "phenotype-llm"
version = "0.1.0"
edition = "2024"
description = "Fork of BerriAI/litellm with Rust core"
license = "MIT"
repository = "https://github.com/BerriAI/litellm"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json", "rustls-tls"] }
async-trait = "0.1"
tracing = "0.1"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
