[package]
name = "phenotype-mcp-server"
version = "0.1.0"
edition = "2024"
description = "Fork of jlowin/fastmcp with Rust core"
license = "MIT"
repository = "https://github.com/jlowin/fastmcp"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.16", features = ["v4"] }
jsonschema = "0.46"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
