[package]
name = "phenotype-mcp-server"
version = "0.1.0"
edition = "2024"
description = "Fork of jlowin/fastmcp with Rust core"
license = "MIT"
repository = "https://github.com/jlowin/fastmcp"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
