[package]
name = "phenotype-surrealdb"
version = "0.1.0"
edition = "2024"
description = "Fork of surrealdb/surrealdb with Pheno extensions"
license = "Apache-2.0"
repository = "https://github.com/surrealdb/surrealdb"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
